Force scrollbar to correctly work out stage width

--- a/assets/erd.css
+++ b/assets/erd.css
@@ -1,3 +1,7 @@
+body {
+	overflow-y: scroll;
+}
+
 div#diagram {
 	padding: 0 20px;
 	overflow: hidden;
